--- a/style.css
+++ b/style.css
@@ -17,17 +17,25 @@ body {
 */
 
 .main-nav {
-    background-image: 
-       
-        url('media/baner.png');
+    background-image:  
+     url('media/baner.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    padding: 2rem 0;
+    padding: 0rem 0;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     position: sticky;
     top: 0;
     z-index: 1000;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.main-nav.visible {
+    top: 0;
+    opacity: 1;
+    transform: translateY(0);
+    animation: slideDownFade 0.8s cubic-bezier(0.4, 0, 0.2, 1) forwards;
 }
 
 .nav-container {
@@ -48,7 +56,7 @@ body {
     align-items: center;
     gap: 1rem;
     flex-shrink: 0;
-    margin-right: auto;
+    margin-right: auto; /* Empurra os botões para a direita */
 }
 
 .logo-icon {
@@ -64,7 +72,7 @@ body {
 }
 
 .nav-btn {
-    padding: 2rem 4.5rem;
+    padding: 1rem 3.5rem;
     background: #7d8d93;
     color: white;
     border: none;
@@ -225,7 +233,7 @@ body {
     margin: 2rem 0;
     padding: 2rem;
     background: #f8f9fa;
-    border-radius: 10px;
+    border-radius: 50px;
 }
 
 .audio-section h3,
